--- a/_mixines.scss
+++ b/_mixines.scss
@@ -4,6 +4,12 @@
     line-height: 22px;
 }
 
+@mixin regular-font-desc() {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
 @mixin flex-center() {
     display: flex;
     justify-content: center;
