--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,12 @@
 /* header */
 .header-top-wraper {
     background-color: $main-color;
+    @include flex-center;
     .header-top {
         @include flex-space-between;
         height: 55px;
         margin: 0 20px;
+        width: 375px;
     }
     .contacts {
         height: 20px;
@@ -47,10 +49,14 @@
         }
     }
 }
+.header-bottom-wraper {
+    @include flex-center;
+}
 .header-bottom {
     @include flex-space-between;
     height: 70px;
-    margin: 0 20px;
+    margin: 0 15px;
+    width: 375px;
     .logo {
         height: 40px;
         a {
@@ -106,6 +112,112 @@
 }
 /* header end */
 
+/* hero section */
+.hero-wraper {
+    @include flex-center;
+    flex-direction: column;
+    background: linear-gradient(39.89deg, rgba(0, 115, 12, 0.81) -22.86%, rgba(251, 246, 238, 0) 116.18%);
+}
+
+.container {
+    width: 375px;
+    .content-wraper {
+        margin: 0 15px;
+        position: relative;
+    }
+    .plant-bg {
+        content: url(img/BG-Img.png);
+        position: absolute;
+        left: -16px;
+        bottom: -35px;
+    }
+    .hero-text {
+        margin-top: 50px;
+        .planting-text {
+            span {
+                content: url(img/Vector.svg);
+                margin-right: 5px;
+            }
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 19.1px;
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+        }
+        .title {
+            font-size: 28px;
+            font-weight: 700;
+            line-height: 38.19px;
+            color: $first-color;
+            margin-bottom: 15px;
+            span {
+                color: $second-color;
+            }
+        }
+        .text {
+            color: $first-color;
+            @include regular-font();
+        }
+    }
+    .btn-wraper {
+        margin: 40px 0;
+        @include flex-center;
+        flex-direction: column;
+        .btn {
+            color: white;
+            margin-bottom: 19px;
+            width: 303px;
+            height: 44px;
+            border-radius: 5px;
+            background-color: $second-color;
+            border: none;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 20px;
+        }
+        .info {
+            @include flex-center;
+            a {
+                text-decoration: none;
+                color: $second-color;
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 19.1px;
+            }
+            span {
+                content: url(img/icon/arrow-btn.svg);
+                margin-left: 12px;
+            }
+        }
+    }
+    .customer-info {
+        display: flex;
+        justify-content: flex-end;
+        gap: 11px;
+        margin-bottom: 35px;
+        .customer-item {
+            @include flex-center;
+            width: 133px;
+            height: 32px;
+            padding: 8px, 10px, 8px, 10px;
+            border-radius: 32px;
+            background: linear-gradient(180deg, #FFF8F1 0%, #CBE5CE 100%);
+            font-size: 10px;
+            font-weight: 400;
+            line-height: 14px;
+            color: $first-color;
+            span {
+                margin-right: 8px;
+                font-size: 12px;
+                font-weight: 700;
+                line-height: 14px;
+                color: $first-color;
+            }
+        }
+    }
+}
+
 /* Tablet */
 
 @media (min-width: 768px) {
@@ -114,12 +226,12 @@
 
 /* Desktop */
 
-@media (min-width: 1920px) {
+@media (min-width: 1080px) {
     /* header */
     .header-top-wraper {
         .header-top {
             height: 59px;
-            margin: 0 251px;
+            width: 1420px;
             .contacts {
                 width: 739px;
                 height: 25px;
@@ -140,7 +252,7 @@
         }
     }
     .header-bottom {
-        margin: 0 256px;
+        width: 1410px;
         height: 85px;
         .logo {
             height: 55px;
@@ -196,6 +308,103 @@
                 display: inline;
                 color: white;
                 margin-left: 10px;
+            }
+        }
+    }
+
+    /* hero section */
+    .hero-wraper {
+        flex-direction: row-reverse;
+        align-items: normal;
+        height: 719px;
+        position: relative;
+        .mobile-hero-img {
+            img {
+                display: none;
+            }
+            content: url(img/hero-img-desc.jpg);
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            }
+        }
+    .container {
+        width: 1410px;
+        .content-wraper {
+            width: 570px;
+            margin: 0;
+        }
+        .plant-bg {
+            display: none;
+        }
+        .hero-text {
+            margin-top: 166px;
+            .planting-text {
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 20px;
+                margin-bottom: 20px;
+            }
+            .title {
+                font-size: 58px;
+                font-weight: 800;
+                line-height: 79px;
+                margin-bottom: 20px;
+            }
+            .text {
+                color: $text-color;
+                @include regular-font-desc();
+            }
+        }
+        .btn-wraper {
+            margin: 50px 0;
+            flex-direction: row;
+            justify-content: normal;
+            align-items: normal;
+            .btn {
+                margin-bottom: 0;
+                margin-right: 30px;
+                width: 175px;
+                height: 50px;
+                font-size: 18px;
+                font-weight: 700;
+                line-height: 24px;
+            }
+            .info {
+                @include flex-center;
+                a {
+                    color: $text-color;
+                    font-size: 18px;
+                    font-weight: 600;
+                    line-height: 30px;
+                }
+                span {
+                    content: url(img/icon/arrow-btn-desc.svg);
+                }
+            }
+        }
+        .customer-info {
+            justify-content: normal;
+            gap: 10px;
+            .customer-item {
+                width: 149px;
+                height: 50px;
+                padding: 0;
+                border-radius: 0;
+                background: none;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 20px;
+                color: $first-color;
+                span {
+                    display: block;
+                    padding: 15px 7px 15px 7px;
+                    border-radius: 35px;
+                    margin-right: 10px;
+                    font-size: 15px;
+                    line-height: 20px;
+                    background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
+                }
             }
         }
     }
