--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Nunito", sans-serif !important;
+  box-sizing: border-box;
 }
 
 /* Mobile 375px*/
@@ -223,9 +224,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 133px;
-  height: 32px;
-  padding: 8px, 10px, 8px, 10px;
+  padding: 8px 10px 8px 10px;
   border-radius: 32px;
   background: linear-gradient(180deg, #FFF8F1 0%, #CBE5CE 100%);
   font-size: 10px;
@@ -242,6 +241,128 @@
   font-weight: 700;
   line-height: 14px;
   color: #212529;
+}
+
+/* service section */
+.service-wraper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.service-wraper .content-wraper {
+  margin-top: 50px;
+}
+.service-wraper .title {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.service-wraper .title h2 {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 38px;
+  margin-bottom: 15px;
+  color: #212529;
+}
+.service-wraper .title h2 span {
+  color: #00730C;
+}
+.service-wraper .title p {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #676767;
+}
+.service-wraper .service-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 1068px;
+}
+.service-wraper .service-block .service-item {
+  background-image: url(img/icon/Icon.png);
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  height: 116px;
+  border-radius: 10px;
+  box-shadow: 2px 11px 30px 0px rgba(51, 51, 51, 0.0784313725);
+}
+.service-wraper .service-block .service-item .item-icon {
+  margin-right: 20px;
+}
+.service-wraper .service-block .service-item:hover {
+  background-color: #00730C;
+}
+.service-wraper .service-block .service-item:hover .item-text h4 {
+  color: white;
+}
+.service-wraper .service-block .service-item:hover .item-text p {
+  color: white;
+}
+.service-wraper .service-block .service-item:first-child .item-icon {
+  content: url(img/icon/Tree-Planting.svg);
+}
+.service-wraper .service-block .service-item:hover:first-child .item-icon {
+  content: url(img/icon/Tree-Planting-hover.svg);
+}
+.service-wraper .service-block .service-item:last-child .item-icon {
+  content: url(img/icon/Watering-&-Irrigation.svg);
+}
+.service-wraper .service-block .service-item:hover:last-child .item-icon {
+  content: url(img/icon/Watering-&-Irrigation-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(2) .item-icon {
+  content: url(img/icon/Grass-Cutting.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(2) .item-icon {
+  content: url(img/icon/Grass-Cutting-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(3) .item-icon {
+  content: url(img/icon/Garden-Design.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(3) .item-icon {
+  content: url(img/icon/Garden-Design-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(4) .item-icon {
+  content: url(img/icon/Plant-Growing.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(4) .item-icon {
+  content: url(img/icon/Plant-Growing-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(5) .item-icon {
+  content: url(img/icon/Flower-Scaping.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(5) .item-icon {
+  content: url(img/icon/Flower-Scaping-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(6) .item-icon {
+  content: url(img/icon/Branch-cutting.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(6) .item-icon {
+  content: url(img/icon/Branch-cutting-hover.svg);
+}
+.service-wraper .service-block .service-item:nth-child(7) .item-icon {
+  content: url(img/icon/Pests-Weeds-Control.svg);
+}
+.service-wraper .service-block .service-item:hover:nth-child(7) .item-icon {
+  content: url(img/icon/Pests-Weeds-Control-hover.svg);
+}
+.service-wraper .service-block .service-item .item-text h4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 21px;
+  color: #212529;
+  margin-bottom: 10px;
+}
+.service-wraper .service-block .service-item .item-text p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #676767;
 }
 
 /* Tablet */
@@ -341,6 +462,7 @@
     flex-direction: row-reverse;
     align-items: normal;
     position: relative;
+    height: 719px;
   }
   .hero-wraper .mobile-hero-img {
     content: url(img/hero-img-desc.jpg);
@@ -444,5 +566,72 @@
     font-size: 15px;
     line-height: 20px;
     background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
+  }
+  /* service section */
+  .service-wraper .content-wraper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+    width: 100%;
+  }
+  .service-wraper .title {
+    max-width: 1136px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  .service-wraper .title h2 {
+    font-size: 45px;
+    font-weight: 800;
+    line-height: 61px;
+    margin-bottom: 30px;
+  }
+  .service-wraper .title p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+  }
+  .service-wraper .service-block {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 1410px;
+    height: 100%;
+    gap: 30px;
+    margin-bottom: 100px;
+  }
+  .service-wraper .service-block .service-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-image: url(img/icon/icon-desc.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 25.68px;
+    flex-direction: column;
+    padding: 59.5px 43px;
+    width: calc(25% - 22.5px);
+    height: 366px;
+  }
+  .service-wraper .service-block .service-item .item-icon {
+    margin-right: 0;
+    width: 70px;
+  }
+  .service-wraper .service-block .service-item .item-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .service-wraper .service-block .service-item .item-text h4 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    margin-bottom: 10px;
+  }
+  .service-wraper .service-block .service-item .item-text p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
   }
 }/*# sourceMappingURL=style.css.map */
